# myclaw

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: backend-api.md  nanobot-design-notes.md
myclaw/: __init__.py  __main__.py  agent.py  gateway.py  provider.py  types.py
myclaw/agent/: __init__.py  ask.py  autocompact.py  context.py  dispatcher.py  dream.py  loop.py  runner.py  runtime.py  types.py
myclaw/bus/: __init__.py  events.py  queue.py
myclaw/cli/: __init__.py  commands.py
myclaw/config/: __init__.py  env.py  settings.py
myclaw/cron/: __init__.py  store.py
myclaw/gateway/: __init__.py  http.py  server.py  static.py
myclaw/mcp/: __init__.py  client.py  tool.py
myclaw/memory/: __init__.py  git.py  store.py
myclaw/observability/: __init__.py  provider.py  runtime.py  store.py  types.py
myclaw/providers/: __init__.py  base.py  fake.py  openai_compat.py
myclaw/session/: __init__.py  manager.py  transcript.py
myclaw/tasks/: __init__.py  store.py
myclaw/tools/: __init__.py  ask.py  base.py  cron.py  filesystem.py  memory.py  message.py  notebook.py  registry.py  self.py  shell.py  spawn.py  tasks.py  web.py
tests/: test_agent.py  test_bus.py  test_cli.py  test_context.py  test_dispatcher.py  test_dream.py  test_filesystem_tools.py  test_gateway.py  test_import_boundaries.py  test_mcp.py  test_memory.py  test_memory_git.py  test_observability.py  test_provider.py  test_runner.py  test_runtime_tools.py  test_session.py  test_tasks_store.py  test_tools.py
webui/: index.html  package-lock.json  package.json  vite.config.ts
(+33 files in other folders)
